samples/_failures_safe/1761662892_d99e4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d63ba56.c: In function ‘main’:
./samples/SAFE/__tmp_5d63ba56.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
